--- a/src/pages/website/__search/website__search.scss
+++ b/src/pages/website/__search/website__search.scss
@@ -2,19 +2,26 @@
   margin-top: 30px;
   display: flex;
   align-items: flex-start;
+  justify-content: space-between;
 
   &__input-parameters,
-  &__filtered-items {
+  &__filtered-items-grid {
     display: grid;
   }
 
   &__input-parameters {
-    grid-gap: 20px;
-    padding-right: 60px;
+    grid-gap: 30px;
+    margin-right: 30px;
   }
 
   &__filtered-items {
-    grid-template-columns: repeat(3, auto);
-    grid-gap: 20px 12px;
+    &-title {
+      margin-bottom: 21px;
+    }
+
+    &-grid {
+      grid-template-columns: repeat(3, auto);
+      grid-gap: 20px 12px;
+    }
   }
 }
