search page is under construction 7

--- a/src/pages/website/__search/website__search.pug
+++ b/src/pages/website/__search/website__search.pug
@@ -222,3 +222,5 @@ block main
         .search-page__filtered-items-grid
           each sample in samples
             +cardRoomSample( sample )
+        .search-page__filtered-items-pagination
+          +paginationElem()
