Added new type rule of components stylesheet, search page is under construction 8

--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -66,6 +66,12 @@
       color: $valhalla;
     }
   }
+
+  &_micro-note {
+    color: rgba($valhalla, .5);
+    font-size: 12px;
+    line-height: 14px;
+  }
 }
 
 .twins-grid-line {
