Changed border style rules of default footer and website-search page

--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -79,3 +79,8 @@
   grid-template-columns: repeat(2, auto);
   justify-content: start;
 }
+
+.fullscreen-bottom-border {
+  border-bottom: 1px solid rgba($valhalla, .25);
+}
+
