--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -41,7 +41,7 @@ mixin footer( item )
   case item.type
     when 'default'
       .footer.footer_default
-        .footer__sections_upper
+        .footer__sections_upper.fullscreen-bottom-border
           .footer__content
             .footer__content_shell
               .footer__logotype
