--- a/src/pages/website/__search/website__search.pug
+++ b/src/pages/website/__search/website__search.pug
@@ -125,7 +125,7 @@ block main
   include /components/title-bar/title-bar.pug
   include /components/input/input.pug
 
-  main.website__main
+  main.website__main.fullscreen-bottom-border
     .search-page.universal-container
       .search-page__input-parameters.elem__width_83
         .search-page__date
