--- a/src/pages/website/__room/website__room.pug
+++ b/src/pages/website/__room/website__room.pug
@@ -1,9 +1,10 @@
 extends /pages/website/website.pug
 
 block head 
-  title = TOXIN HOTEL / ROOM 
+  title TOXIN HOTEL / ROOM 
 
-block main 
+block main
+  include /components/card/__room-booking/card__room-booking.pug
   include /components/advantage-bar/advantage-bar.pug
   include /components/votes-chart/votes-chart.pug
   include /components/comment-bar/comment-bar.pug
@@ -16,60 +17,74 @@ block main
         .room-page__interior-pic_minor-top
         .room-page__interior-pic_minor-bottom
       .room-page__section_information
-        .room-page__room-advantages
-          +advantageBars([
-            {
-              iconname: "insert_emoticon",
-              title: "Комфорт",
-              brief: "Шумопоглощающие стены"
-            },
-            {
-              iconname: "location_city",
-              title: "Удобство",
-              brief: "Окно в каждой из спален"
-            },
-            {
-              iconname: "whatshot",
-              title: "Уют",
-              brief: "Номер оснащён камином"
-            }
-          ])
-        .room-page__visitors-impression-chart
-          +votesChart([
-            { gradient: "primary",    votes: 65,  legend: "Удовлетворительно" },
-            { gradient: "secondary",  votes: 65,  legend: "Хорошо"            },
-            { gradient: "tertiary",   votes: 130, legend: "Великолепно"       },
-            { gradient: "quaternary", votes: 0,   legend: "Разочарован"       }
-          ])
-        .room-page__reviews
-          +commentBar([
-            {
-              name: "Мурад Сарафанов",
-              daysago: "5 дней назад",
-              avatarname: "murad",
-              text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.",
-              likebtn: {
-                groupname: "room-page__comment-first",
-                pressed: true,
-                likecount: 12
+        .room-page__sub-section_left
+          .room-page__room-advantages
+            .room-page__title
+              span.custom-font-style_h2 Сведения о номере
+            +advantageBars([
+              {
+                iconname: "insert_emoticon",
+                title: "Комфорт",
+                brief: "Шумопоглощающие стены"
+              },
+              {
+                iconname: "location_city",
+                title: "Удобство",
+                brief: "Окно в каждой из спален"
+              },
+              {
+                iconname: "whatshot",
+                title: "Уют",
+                brief: "Номер оснащён камином"
               }
-            },
-            {
-              name: "Патрисия Стёклышкова",
-              daysago: "Неделю назад",
-              avatarname: "patricia",
-              text: "Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент",
-              likebtn: {
-                groupname: "room-page__comment-second",
-                pressed: false,
-                likecount: 3
-              }
-            },
-          ])
-        .room-page__rules-list
-          +bulletList([
-            "Нельзя с питомцами",
-            "Без вечеринок и мероприятий",
-            "Время прибытия — после 13:00, а выезд до 12:00"
-          ])
-        .room-page__cancellation-policy
+            ])
+          .room-page__visitors-impression-chart
+            .room-page__title
+              span.custom-font-style_h2 Впечатления от номера
+            +votesChart([
+              { gradient: "primary",    votes: 65,  legend: "Удовлетворительно" },
+              { gradient: "secondary",  votes: 65,  legend: "Хорошо"            },
+              { gradient: "tertiary",   votes: 130, legend: "Великолепно"       },
+              { gradient: "quaternary", votes: 0,   legend: "Разочарован"       }
+            ])
+          .room-page__reviews
+            .room-page__title
+              span.custom-font-style_h2 Отзывы посетителей номера
+            +commentBar([
+              {
+                name: "Мурад Сарафанов",
+                daysago: "5 дней назад",
+                avatarname: "murad",
+                text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.",
+                likebtn: {
+                  groupname: "room-page__comment-first",
+                  pressed: true,
+                  likecount: 12
+                }
+              },
+              {
+                name: "Патрисия Стёклышкова",
+                daysago: "Неделю назад",
+                avatarname: "patricia",
+                text: "Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент",
+                likebtn: {
+                  groupname: "room-page__comment-second",
+                  pressed: false,
+                  likecount: 3
+                }
+              },
+            ])
+          .room-page__rules-list
+            .room-page__title
+              span.custom-font-style_h2 Правила
+            +bulletList([
+              "Нельзя с питомцами",
+              "Без вечеринок и мероприятий",
+              "Время прибытия — после 13:00, а выезд до 12:00"
+            ])
+          .room-page__cancellation-policy
+            .room-page__title
+              span.custom-font-style_h2 Отмена
+            span.custom-font-style_body Бесплатная отмена в течение 48 ч. После этого при отмене не позднее чем за 5 дн. до прибытия вы получите полный возврат за вычетом сбора за услуги.
+        .room-page__sub-section_right
+          +cardRoomBooking()
