--- a/src/pages/website/__room/website__room.scss
+++ b/src/pages/website/__room/website__room.scss
@@ -1,8 +1,40 @@
 .room-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__section_interiors-footage {
+    display: flex;
+    width: 100%;
+  }
+
   &__section_information {
     display: flex;
     justify-content: space-between;
     margin-block: 70px;
+  }
+
+  &__footage {
+    &_left {
+      flex: 68%;
+    }
+    &_right {
+      flex: 32%;
+    }
+  }
+
+  &__interior-pic {
+    &_major {
+    }
+    &_minor {
+      &-top,
+      &-bottom {
+      }
+
+      &-bottom {
+        
+      }
+    }
   }
 
   &__title {
@@ -12,8 +44,6 @@
   &__sub-section_left {
     display: grid;
     grid-gap: 30px;
-    grid-template-rows: none;
-    grid-template-columns: 341px;
     grid-template-areas:
       "a b"
       "c c"
