--- a/src/variables/variables.scss
+++ b/src/variables/variables.scss
@@ -25,3 +25,4 @@ $quaternary-gradient: defineGradient( $suva-grey , $port-gore );
 
 $wideFramesWidthMax: 1600px;
 $wideFramesWidthMin: 1160px;
+$wideFramesWidthBase: 1440px;
