--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,24 +1,24 @@
-@import "@variables";
+@import '@variables';
 
 .footer {
-  &_default{
+  &_default {
+    height: 442px;
     width: 100%;
-    height: 442px
   }
 
   &__sections {
     &_upper,
     &_lower {
+      background-color: #fff;
+      box-sizing: border-box;
       display: flex;
       justify-content: center;
-      box-sizing: border-box;
       padding-inline: 140px;
-      background-color: white;
     }
 
     &_upper {
       align-items: start;
-      padding-block: 111px
+      padding-block: 111px;
     }
 
     &_lower {
@@ -30,17 +30,17 @@
 
   &_mobile,
   &__mobile-section {
-    display: flex;
     align-items: center;
+    display: flex;
     justify-content: center;
     width: 100%;
   }
 
   &__mobile-section {
+    background-color: #fff;
     flex-direction: column;
     height: 367px;
     max-width: 768px;
-    background-color: white;
 
     & > span {
       margin-block: 20px 25px;
@@ -50,9 +50,9 @@
   &__content {
     display: flex;
     justify-content: space-between;
-    width: 100%;
     max-width: $wideFramesWidthMax;
     min-width: $wideFramesWidthMin;
+    width: 100%;
 
     &_shell {
       display: grid;
