--- a/src/pages/pages.scss
+++ b/src/pages/pages.scss
@@ -1,10 +1,11 @@
-html, body {
+html,
+body {
   height: 100%;
 }
 
 body {
-  margin: auto;
   font-family: Montserrat, Quicksand, sans-serif;
+  margin: auto;
   user-select: none;
 }
 
