--- a/src/components/input/_dropdown/input_dropdown.pug
+++ b/src/components/input/_dropdown/input_dropdown.pug
@@ -10,8 +10,9 @@ mixin inputDropdown( item )
     +materialIcon('expand_more', item.id )
   .input__dropdown.expander__aim( class=expanderActiveClass )
     each option in item.dropdown.options
-      .input__dropdown_option
-        span.input__dropdown_name.custom-font-style_h3 #{option}
-        .input__dropdown_button-inc 
-        span.input__dropdown_counter 
-        .input__dropdown_button-dec
+      .input__option
+        span.input__option_name.custom-font-style_h3 #{option}
+        .input__option_buttons
+          .input__option_button-dec -
+          .input__option_counter 0
+          .input__option_button-inc +
