--- a/src/components/input/_dropdown/input_dropdown.scss
+++ b/src/components/input/_dropdown/input_dropdown.scss
@@ -1,27 +1,53 @@
-@import "@variables";
+@import '@variables';
+
+$optionButtonSize: 30px;
 
 .input {
   &__dropdown {
+    background-color: $white;
+    border-color: rgba($valhalla, 0.5);
+    border-radius: 0 0 4px 4px;
+    box-shadow: 0 10px 20px rgba($valhalla, 0.05);
+    padding: 7px 7px 7px 15px;
     position: absolute;
-    visibility: hidden;
     top: 43px;
+    visibility: hidden;
     width: inherit;
     z-index: 20;
-    padding: 7px 7px 7px 15px;
-    background-color: white;
-    box-shadow: 0px 10px 20px rgba($valhalla, 0.05);
-    border-color: rgba($valhalla, .5);
-    border-radius: 0px 0px 4px 4px;
   }
 
   &__option {
     display: flex;
     align-items: center;
-    margin-bottom: 7px;
+    justify-content: space-between;
     height: 30px;
+    margin-bottom: 7px;
 
     &_name {
       text-transform: uppercase;
     }
+
+    &_buttons {
+      display: flex;
+      justify-content: space-between;
+      width: 92px;
+    }
+
+    &_counter,
+    &_button-dec,
+    &_button-inc {
+      text-align: center;
+      vertical-align: middle;
+    }
+
+    &_button-dec,
+    &_button-inc {
+      border: 1px solid rgba($valhalla, 0.25);
+      border-radius: 50%;
+      height: $optionButtonSize;
+      width: $optionButtonSize;
+      line-height: $optionButtonSize;
+    }
   }
+
 }
