input dropdown submixin is under construction 4

--- a/src/components/input/_dropdown/input_dropdown.scss
+++ b/src/components/input/_dropdown/input_dropdown.scss
@@ -50,11 +50,13 @@ $optionButtonSize: 30px;
 
     &_button-dec,
     &_button-inc {
+      font-size: 18px;
       width: $optionButtonSize;
       color: rgba($valhalla, 0.5);
       border: 1px solid rgba($valhalla, 0.25);
       border-radius: 50%;
       font-weight: normal;
+      cursor: pointer;
     }
   }
 }
