--- a/src/components/input/_dropdown/input_dropdown.pug
+++ b/src/components/input/_dropdown/input_dropdown.pug
@@ -1,4 +1,5 @@
 include /components/material-icon-cell/material-icon-cell.pug
+include /components/button/__mean-oval/button__mean-oval.pug
 
 mixin inputDropdown( item )
   - const dropdown = item.dropdown || {}
@@ -16,3 +17,12 @@ mixin inputDropdown( item )
           .input__option_button-dec -
           .input__option_counter 0
           .input__option_button-inc +
+      if ( item.dropdown.controls )
+        .input__clear-n-submit
+          +meanOvalButtons({
+            groupname: item.id,
+            buttons: [
+              { type: "text", text: "очистить" },
+              { type: "text", text: "применить"}
+            ]
+          })
