--- a/src/components/card/__room-booking/card__room-booking.pug
+++ b/src/components/card/__room-booking/card__room-booking.pug
@@ -40,9 +40,9 @@ mixin cardRoomBooking()
         placeholder: "Сколько гостей",
         dropdown: {
           options: [
-            "взрослые",
-            "дети",
-            "младенцы"
+            { name: "взрослые", count: 2 },
+            { name: "дети",     count: 1 },
+            { name: "младенцы", count: 0 }
           ]
         }
       })
