--- a/src/components/button/__mean-oval/button__mean-oval.scss
+++ b/src/components/button/__mean-oval/button__mean-oval.scss
@@ -31,7 +31,7 @@
   }
 
   &__background {
-    position: relative;
+    position: absolute;
     border-radius: 22px;
     height: 44px;
     width: 100%;
