Fixed controls absence of one of form elements dropdown

--- a/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
+++ b/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
@@ -236,6 +236,7 @@ block main
           placeholder: "3 гостя",
           dropdown: {
             expanded: true,
+            controls: true,
             options: [
               { name: "взрослые", count: 2 },
               { name: "дети",     count: 1 },
