--- a/src/components/button/__mean-oval/button__mean-oval.scss
+++ b/src/components/button/__mean-oval/button__mean-oval.scss
@@ -18,7 +18,6 @@
   justify-content: center;
   align-items: center;
   min-height: 15px;
-  min-width: 61px;
   margin: 0;
   box-sizing: border-box;
 
@@ -108,6 +107,10 @@
       }
     }
   }
+}
+
+.mob_non-absolute {
+  position: relative;
 }
 
 .ripple {
