Changed ids of some dropdowns from form-elements page

--- a/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
+++ b/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
@@ -180,7 +180,7 @@ block main
     .form-elements__column.column_left
       .form-elements__block.block__dropdowns_action
         +input({
-          id: "uik-fe__action_01",
+          id: "uik-fe__first-active",
           type: "dropdown",
           title: "dropdown",
           state: "default",
@@ -195,7 +195,7 @@ block main
           }
         })
         +input({
-          id: "uik-fe__action_02",
+          id: "uik-fe__second-active",
           type: "dropdown",
           title: "dropdown",
           state: "expanded",
@@ -213,7 +213,7 @@ block main
     .form-elements__column.column_center
       .form-elements__block.block__dropdowns_no-guests
         +input({
-          id: "uik-fe__no-guests_01",
+          id: "uik-fe__no-guests",
           type: "dropdown",
           title: "dropdown",
           placeholder: "Сколько гостей",
@@ -230,7 +230,7 @@ block main
     .form-elements__column.column_right
       .form-elements__block.block__dropdowns_guests
         +input({
-          id: "uik-fe__guests_01",
+          id: "uik-fe__some-guests",
           type: "dropdown",
           title: "dropdown",
           placeholder: "3 гостя",
