dropdown script is under construction 7

--- a/src/components/input/_dropdown/input_dropdown.scss
+++ b/src/components/input/_dropdown/input_dropdown.scss
@@ -72,3 +72,8 @@ $optionButtonSize: 30px;
 .hidden-controller {
   visibility: hidden;
 }
+
+.button-frozen {
+  pointer-events: none;
+  opacity: .5;
+}
