Changed mean-oval buttons and inc-dec dropcown buttons opacity transition rules

--- a/src/components/button/__mean-oval/button__mean-oval.scss
+++ b/src/components/button/__mean-oval/button__mean-oval.scss
@@ -95,6 +95,7 @@
   &_text {
     width: max-content;
     white-space: nowrap;
+    transition: opacity .5s ease;
 
     & > button {
       color: $perfume;
