not-found page is under construction

--- a/src/pages/website/__no-page/website__no-page.pug
+++ b/src/pages/website/__no-page/website__no-page.pug
@@ -4,6 +4,10 @@ block head
   title 404 / Not Found
 
 block main
-  main.website__main
-    .no-page.universal-container
-      span.not-found_text 404 NOT FOUND
+  - const titleText = 'ну спасибо'
+  - const noteText = 'вот вы всё и поломали'
+
+  main.website__main.fullscreen-bottom-border
+    .no-page.universal-container.custom-font-style_body-plain
+      span.no-page__not-found_title( data-text=titleText ) #{titleText}
+      span.no-page__not-found_note( data-text=noteText ) #{noteText}
