--- a/src/pages/website/__no-page/website__no-page.scss
+++ b/src/pages/website/__no-page/website__no-page.scss
@@ -1,8 +1,37 @@
 @import "@variables";
 
-.not-found {
-  &_text {
-    color: rgba($valhalla, 1);
-    font-size: 72;
+.no-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 400px;
+  background-image: url('/src/assets/images/raster/misc/not-found.png');
+  background-position: top;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  object-fit: cover;
+
+  &__not-found {
+    position: relative;
+
+    &_title {
+      text-transform: uppercase;
+      font-size: 96px;
+      line-height: 96px;
+    }
+    &_note {
+      font-size: 18px;
+      line-height: 24px;
+    }
+    &::before,
+    &::after {
+      content: attr(data-text);
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
   }
 }
