--- a/src/pages/website/__no-page/website__no-page.scss
+++ b/src/pages/website/__no-page/website__no-page.scss
@@ -13,8 +13,6 @@
   object-fit: cover;
 
   &__not-found {
-    position: relative;
-
     &_title {
       text-transform: uppercase;
       font-size: 96px;
@@ -24,14 +22,52 @@
       font-size: 18px;
       line-height: 24px;
     }
-    &::before,
-    &::after {
-      content: attr(data-text);
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+
+    &_title,
+    &_note {
+      position: relative;
+
+      &::before,
+      &::after {
+        content: attr(data-text);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+
+      &::before {
+        left: 3px;
+        text-shadow: -2px 0 #ff0000;
+        animation: glitch-anim-1 2s infinite linear alternate-reverse;
+      }
+      &::after {
+        left: -2px;
+        text-shadow: -2px 0 #008000;
+        animation: glitch-anim-2 2s infinite linear alternate-reverse;
+        background-color: $white;
+      }
+    }
+  }
+}
+
+@keyframes glitch-anim-1 {
+  $steps: 10;
+
+  @for $i from 0 through $steps {
+    #{ percentage( $i * ( 1 / $steps ) ) } {
+      clip: rect(random(100)+px, 9999px, random(100)+px, 0);
+    }
+  }
+}
+
+@keyframes glitch-anim-2 {
+  $steps: 15;
+  
+  @for $i from 0 through $steps {
+    #{ percentage( $i * ( 1 / $steps ) ) } {
+      clip: rect(random(100)+px, 9999px, random(100)+px, 0);
     }
   }
 }
