Adjusted glitch animation for better immersion

--- a/src/pages/website/__no-page/website__no-page.pug
+++ b/src/pages/website/__no-page/website__no-page.pug
@@ -8,6 +8,6 @@ block main
   - const noteText = 'вот вы всё и поломали'
 
   main.website__main.fullscreen-bottom-border
-    .no-page.universal-container.custom-font-style_body-plain
+    .no-page.custom-font-style_body-plain
       span.no-page__not-found_title( data-text=titleText ) #{titleText}
       span.no-page__not-found_note( data-text=noteText ) #{noteText}
