--- a/src/pages/website/__no-page/website__no-page.scss
+++ b/src/pages/website/__no-page/website__no-page.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   height: 400px;
+  width: 100%;
   background-image: url('/src/assets/images/raster/misc/not-found.png');
   background-position: top;
   background-repeat: no-repeat;
@@ -35,39 +36,30 @@
         left: 0;
         width: 100%;
         height: 100%;
+        background-color: rgba( $white, .8 );
       }
 
       &::before {
-        left: 3px;
-        text-shadow: -2px 0 #ff0000;
-        animation: glitch-anim-1 2s infinite linear alternate-reverse;
+        left: 2px;
+        text-shadow: -1px 0 #ff0000;
+        animation: glitch-anim 1.7s infinite linear alternate-reverse;
       }
       &::after {
         left: -2px;
-        text-shadow: -2px 0 #008000;
-        animation: glitch-anim-2 2s infinite linear alternate-reverse;
-        background-color: $white;
+        text-shadow: -1px 0 #008000;
+        animation: glitch-anim 1.5s infinite linear alternate-reverse;
       }
     }
   }
 }
 
-@keyframes glitch-anim-1 {
+@keyframes glitch-anim {
   $steps: 10;
 
   @for $i from 0 through $steps {
     #{ percentage( $i * ( 1 / $steps ) ) } {
-      clip: rect(random(100)+px, 9999px, random(100)+px, 0);
+      clip: rect( random(100) + px, 9999px, random(100) + px, 0 );
     }
   }
 }
 
-@keyframes glitch-anim-2 {
-  $steps: 15;
-  
-  @for $i from 0 through $steps {
-    #{ percentage( $i * ( 1 / $steps ) ) } {
-      clip: rect(random(100)+px, 9999px, random(100)+px, 0);
-    }
-  }
-}
