Changed glitch-animation parameters

--- a/src/pages/website/__no-page/website__no-page.pug
+++ b/src/pages/website/__no-page/website__no-page.pug
@@ -4,8 +4,8 @@ block head
   title 404 / Not Found
 
 block main
-  - const titleText = 'ну спасибо'
-  - const noteText = 'вот вы всё и поломали'
+  - const titleText = 'ошибка 404'
+  - const noteText = 'страница не найдена'
 
   main.website__main.fullscreen-bottom-border
     .no-page.custom-font-style_body-plain
