--- a/src/pages/website/__no-page/website__no-page.scss
+++ b/src/pages/website/__no-page/website__no-page.scss
@@ -1,5 +1,8 @@
 @import "@variables";
 
+$titleSize: 96px;
+$noteSize: 18px;
+
 .no-page {
   display: flex;
   flex-direction: column;
@@ -16,12 +19,12 @@
   &__not-found {
     &_title {
       text-transform: uppercase;
-      font-size: 96px;
-      line-height: 96px;
+      font-size: $titleSize;
+      line-height: $titleSize;
     }
     &_note {
-      font-size: 18px;
-      line-height: 24px;
+      font-size: $noteSize;
+      line-height: $noteSize;
     }
 
     &_title,
@@ -42,23 +45,23 @@
       &::before {
         left: -2px;
         text-shadow: 1px 0 #ff0000;
-        animation: glitch-anim 3.4s infinite linear alternate-reverse;
+        animation: glitch-anim 1.7s infinite linear alternate-reverse;
       }
       &::after {
         left: 2px;
         text-shadow: -1px 0 #008000;
-        animation: glitch-anim 3s infinite linear alternate-reverse;
+        animation: glitch-anim 1.4s infinite linear alternate-reverse;
       }
     }
   }
 }
 
 @keyframes glitch-anim {
-  $iterations: 20;
+  $iterations: 10;
 
   @for $index from 0 through $iterations {
     #{ percentage( $index * ( 1 / $iterations ) ) } {
-      clip: rect( random(100) + px, 100vw, random(100) + px, 0 );
+      clip: rect( random( $titleSize ) + px, 100vw, random( $titleSize ) + px, 0 );
     }
   }
 }
