Changed gradient-fill-entities export/import properties

--- a/src/components/advantage-bar/advantage-bar.scss
+++ b/src/components/advantage-bar/advantage-bar.scss
@@ -10,7 +10,7 @@
   }
 
   &__icon {
-    @extend .gradient-fill;
+    @extend %gradient-fill;
     position: relative;
     width: 48px;
     height: 48px;
