--- a/src/components/button/__star-rate/button__star-rate.scss
+++ b/src/components/button/__star-rate/button__star-rate.scss
@@ -2,7 +2,7 @@
 @import "../../../styles/gradient-fill-entities.scss";
 
 .star-rate {
-  @extend .gradient-fill;
+  @extend %gradient-fill;
 
   &__line-array {
     grid-gap: 20px;
