--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -74,7 +74,7 @@ $focused-color_border-n-icon: rgba($valhalla, .5);
     }
   
     &_subscribe {
-      @extend .gradient-fill;
+      @extend %gradient-fill;
     }
   }
 
