Changed button style selectors export/import properties

--- a/src/components/button/__like/button__like.scss
+++ b/src/components/button/__like/button__like.scss
@@ -8,7 +8,7 @@
   align-items: center;
 
   &__elem {
-    @extend .oval-button_frame;
+    @extend %oval-button_frame;
 
     &:checked + .like-button__text {
       opacity: 1;
