Added cross-platform favicons, pagesFavicon mixin

--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -1,7 +1,9 @@
+include /pages/pages.pug
 include /components/logo/logo.pug
 
 head 
   block head
+  +pageFavicons()
 
 block body
   header.ui-kit__header
