Title text transformed to uppercase

--- a/src/pages/website/__no-page/website__no-page.pug
+++ b/src/pages/website/__no-page/website__no-page.pug
@@ -1,7 +1,7 @@
 extends /pages/website/website.pug
 
 block head 
-  title 404 / Not Found
+  title 404 / NOT FOUND
 
 block main
   - const titleText = 'ошибка 404'
